--- a/MainWindow.axaml
+++ b/MainWindow.axaml
@@ -5,6 +5,8 @@
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="Rects.MainWindow"
 		PointerPressed="PPressed"
+		PointerMoved="PMoved"
+		PointerReleased="PReleased"
 		
         Title="Rects">
 
