--- a/MainWindow.axaml
+++ b/MainWindow.axaml
@@ -7,15 +7,17 @@
 		PointerPressed="PPressed"
 		PointerMoved="PMoved"
 		PointerReleased="PReleased"
-		
-        Title="Rects">
+		KeyDown ="KeyDown"
+	Title="Rects">
 
 	<StackPanel Name="stack"  Background="Gray">
-		<StackPanel Name="Buttons" Orientation="Horizontal">
-			
-		</StackPanel> 
+		<StackPanel Name="Buttons" Orientation="Horizontal" Background="Black">
+			<TextBox Name="r_indicator" IsEnabled="false" Foreground="White">
+				radius = 50
+			</TextBox>
+		</StackPanel>
 		<Canvas Name="canv">
-			
+
 		</Canvas>
 	</StackPanel>
 
